--- a/src/MMW.html
+++ b/src/MMW.html
@@ -10,10 +10,6 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=IM+Fell+Double+Pica&display=swap" rel="stylesheet">
       <style>
-        .carousel-inner div {
-        
-        object-fit: cover;
-            }
         img {
         width: 450px;
         height: 450px;
@@ -29,7 +25,7 @@
              </section>
              <h3 class="font-textbody">1. Patterns Task</h3>
              <section class="grid gap-2 py-4 lg:py-8 md:gap-2 md:grid-cols-3 md:grid-rows-1 md:pb-4">
-                <img src="/images/patterns_task_1.png" class="object-scale-down" alt="Failed to load" ></img>
+                <img src="/images/patternstask1.png" class="object-scale-down" alt="Failed to load" ></img>
                 <img src="/images/patterns_task_2.png" class="object-scale-down" alt="Failed to load"></img>
                 <img src="/images/patterns_task_3.png" class="object-scale-down " alt="Failed to load"></img>
              </section>
@@ -86,25 +82,3 @@
           </div>
       </body>
 </html>
-
-<!-- <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="/images/bool_alg_1.png" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="/images/bool_alg_2.png" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="..." class="d-block w-100" alt="...">
-                  </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
-              </div> -->
