--- a/src/MMW.html
+++ b/src/MMW.html
@@ -25,24 +25,24 @@
              </section>
              <h3 class="font-textbody">1. Patterns Task</h3>
              <section class="grid gap-2 py-4 lg:py-8 md:gap-2 md:grid-cols-3 md:grid-rows-1 md:pb-4">
-                <img src="/images/patternstask1.png" class="object-scale-down" alt="Failed to load" ></img>
-                <img src="/images/patterns_task_2.png" class="object-scale-down" alt="Failed to load"></img>
-                <img src="/images/patterns_task_3.png" class="object-scale-down " alt="Failed to load"></img>
+                <img src="../images/patterns_task_1.png" class="object-scale-down" alt="Failed to load" ></img>
+                <img src="../images/patterns_task_2.png" class="object-scale-down" alt="Failed to load"></img>
+                <img src="../images/patterns_task_3.png" class="object-scale-down " alt="Failed to load"></img>
              </section>
              <h3 class="font-textbody">2. Logic gates and Boolean Algebra</h3>
-             <section class="py-4 lg:py-8 grid gap-2 md:gap-2 md:grid-cols-2 md:grid-rows-1 md:pb-4"">
-                <img src="/images/bool_alg_1.png" class="object-scale-down" alt="Failed to load" ></img>
-                <img src="/images/bool_alg_2.png" class="object-scale-down" alt="Failed to load"></img>
+             <section class="py-4 lg:py-8 grid gap-2 md:gap-2 md:grid-cols-2 md:grid-rows-1 md:pb-4">
+                <img src="../images/bool_alg_1.png" class="object-scale-down" alt="Failed to load" ></img>
+                <img src="../images/bool_alg_2.png" class="object-scale-down" alt="Failed to load"></img>
              </section>
              <h3 class="font-textbody">3. Data Analytics Task</h3>
-             <section class="py-4 lg:py-8 grid gap-2 md:gap-2 md:grid-cols-2 md:grid-rows-1 md:pb-4"">
-                <img src="/images/data_analytics.png" class="object-scale-down" alt="Failed to load" ></img>
-                <img src="/images/data_analytics_2.png" class="object-scale-down" alt="Failed to load"></img>
+             <section class="py-4 lg:py-8 grid gap-2 md:gap-2 md:grid-cols-2 md:grid-rows-1 md:pb-4">
+                <img src="../images/data_analytics.png" class="object-scale-down" alt="Failed to load" ></img>
+                <img src="../images/data_analytics_2.png" class="object-scale-down" alt="Failed to load"></img>
              </section>
              <h3 class="font-textbody">4. Comic Strip</h3>
-             <section class="py-4 lg:py-8 grid gap-2 md:gap-2 md:grid-cols-2 md:grid-rows-1 md:pb-4"">
-                <img src="/images/comic_1.png" class="object-scale-down" alt="Failed to load" ></img>
-                <img src="/images/comic_2.png" class="object-scale-down" alt="Failed to load"></img>
+             <section class="py-4 lg:py-8 grid gap-2 md:gap-2 md:grid-cols-2 md:grid-rows-1 md:pb-4">
+                <img src="../images/comic_1.png" class="object-scale-down" alt="Failed to load" ></img>
+                <img src="../images/comic_2.png" class="object-scale-down" alt="Failed to load"></img>
              </section>
              <h3 class="font-textbody">5. Reflection</h3>
              <p class="font-textbody">As you can see, 
